--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 author:
   name   : "Federica Di Lauro"
   avatar : "/assets/images/me.jpg"
-  bio    : "Master's student at Università di Milano Bicocca, currently working in the University's robotics lab, Iralab."
+  bio    : "PhD student at Università di Milano Bicocca"
   location: "Milan, Italy"
   links:
     - label: "GitHub"
